修复姿势样式应用不准的问题

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ img{
     margin-left: 100px;
 }
 
-@media(min-width:300px){
+@media(min-width:300px) and (max-width:400px){
     .img_to_heart{
         position:absolute;
         left: 50%;
